--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
                         <ul class="primary-nav">
                             <li><a href="#invitation">Schedule</a></li>
                             <li><a href="#beginnings">Our Story</a></li>
+                            <li><a href="#events">Engagement</a></li>
                             <li><a href="#eng-pics">Gallery</a></li>
+                            <li><a href="#map">Venue</a></li>
                             <li><a href="#faq">Q<span class="alt-amp">&</span>A</a></li>
                         </ul>
                         <ul class="member-actions">
-                            <li><a href="#map" class="login">Venue</a></li>
                             <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
                         </ul>
                     </nav>
@@ -110,8 +111,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <p>We warmly invite you to witness our holy matrimony.<br>
-                  Thank you for celebrating this joyous occasion with us!</p>
+                <p>We will be honoured to have you at our holy matrimony!<br>
+                  We will be honoured to have you at our wedding!</p>
             </div>
         </div>
     </div>
@@ -151,15 +152,15 @@
       <p class="venue-location">Living Hope Methodist Church</p>
 
       <div class="event-time-table">
-        <div><strong>10:30am – 11:00am</strong></div>
+        <div><strong>10:45am – 11:00am</strong></div>
         <div>Registration</div>
-        <div><strong>11:00am – 12:00pm</strong></div>
+        <div><strong>11:00am – 12:30pm</strong></div>
         <div>Holy Matrimony</div>
         <div><strong>12:30pm onwards</strong></div>
         <div>Photo-taking + Lunch Reception</div>
       </div>
 
-      <p class="event-seating-note">Please be seated by <strong>10:45am</strong></p>
+      <p class="event-seating-note">Please be seated by <strong>10:55am</strong></p>
     </div>
 
     <hr class="event-divider">
@@ -262,7 +263,7 @@
       <div class="timeline-item">
         <div class="timeline-content left">
           <h4><strong><em>On that stormy day...he proposed</em></strong></h4>
-          <p> Dark, rainy, just us on a deserted island. No photos—only Simon’s words, moving Amanda to tears and creating a memory beyond pictures (now captured in his drawing). </p>
+          <p>Dark, rainy, just us on a deserted island. No photos—only Simon’s words, moving Amanda to tears and creating a memory beyond pictures (now captured in his drawing).</p>
         </div>
         <div class="timeline-image right" >
           <a class="fancybox" rel="group" href="img/Proposal-1.jpg">
@@ -283,16 +284,16 @@
           </a>
         </div>
         <div class="timeline-content right">
-          <h4><strong><em>Back on Valentine’s Day</em></strong></h4>
-          <p>We went back to our secret island and were blessed with a stunning sunset. We recreated the moment with pictures – felt like a dream!</p>
+          <h4><strong><em>She said Yes</em></strong></h4>
+          <p>She said yes to a lifetime of sunsets together, in the pouring rain (with her stuffed toys as our only witness)</p>
         </div>
       </div>
 
       <!-- Third Row -->
       <div class="timeline-item">
         <div class="timeline-content left">
-          <h4><strong><em>She said Yes</em></strong></h4>
-          <p>She said yes to a lifetime of sunsets together, in the pouring rain (with her stuffed toys as our only witness)</p>
+          <h4><strong><em>Back on Valentine’s Day</em></strong></h4>
+          <p>We went back to our secret island and were blessed with a stunning sunset. We recreated the moment with pictures – felt like a dream!</p>
         </div>
         <div class="timeline-image right" >
           <a class="fancybox" rel="group" href="img/Proposal-3.jpg">
@@ -311,22 +312,11 @@
   <div class="mobile-timeline-item">
     <div class="dot-line"></div>
     <div class="mobile-content">
-      <h4><strong><em>On that stormy day</em></strong></h4>
+      <h4><strong><em>On that stormy day...he proposed</em></strong></h4>
             <div class="image-box">
             <img src="img/Proposal-1.jpg" alt="Proposal Sunset" class="fade-right">
             </div>
-      <p>Dark, rainy, just both of us. No pictures, just the most beautiful words said by Simon, forming a memory that could last forever</p>
-    </div>
-  </div>
-
-  <div class="mobile-timeline-item">
-    <div class="dot-line"></div>
-    <div class="mobile-content">
-      <h4><strong><em>Back on Valentine’s Day</em></strong></h4>
-            <div class="image-box">
-            <img src="img/Proposal-2.jpg" alt="Proposal Sunset" class="fade-right">
-            </div>
-      <p>We went back to our secret island and were blessed with a stunning sunset. We recreated the moment with pictures – felt like a dream!</p>
+      <p>Dark, rainy, just us on a deserted island. No photos—only Simon’s words, moving Amanda to tears and creating a memory beyond pictures (now captured in his drawing).</p>
     </div>
   </div>
 
@@ -335,9 +325,20 @@
     <div class="mobile-content">
       <h4><strong><em>She said Yes</em></strong></h4>
             <div class="image-box">
+            <img src="img/Proposal-2.jpg" alt="Proposal Sunset" class="fade-right">
+            </div>
+      <p>Dark, rainy, just us on a deserted island. No photos—only Simon’s words, moving Amanda to tears and creating a memory beyond pictures (now captured in his drawing).</p>
+    </div>
+  </div>
+
+  <div class="mobile-timeline-item">
+    <div class="dot-line"></div>
+    <div class="mobile-content">
+      <h4><strong><em>Back on Valentine’s Day</em></strong></h4>
+            <div class="image-box">
             <img src="img/Proposal-3.jpg" alt="Proposal Sunset" class="fade-right">
             </div>
-      <p>She said yes to a lifetime of sunsets together, in the pouring rain (with her stuffed toys as our only witness)</p>
+      <p>We went back to our secret island and were blessed with a stunning sunset. We recreated the moment with pictures – felt like a dream!</p>
     </div>
   </div>
 </section>
@@ -780,11 +781,15 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted jointly by us <span class="fa fa-heart pulse2"></span> two non-CS students</p>
+                <p>Crafted by Simon & Amanda <span class="fa fa-heart pulse2"></span><br>
+                #engineerscancode</p>
             </div>
         </div>
     </div>
 </footer>
+
+
+
 <script src="js/vendor/jquery-1.11.2.min.js" onerror="loadJsFromCDN('jquery.js')"></script>
 <script src="node_modules/waypoints/lib/jquery.waypoints.min.js" onerror="loadJsFromCDN('waypoints.js')"></script>
 <script src="js/jquery.fancybox.pack.js"></script>
