changed engagement captions (mobile only)

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <div class="timeline-item">
         <div class="timeline-content left">
           <h4><strong><em>On that stormy day...he proposed</em></strong></h4>
-          <p>Dark, rainy, just us on a deserted island. No photos—only Simon’s words, moving Amanda to tears and creating a memory beyond pictures (now captured in his drawing).</p>
+          <p>Dark, rainy, just us on a remote island. No photos—only Simon’s beautiful words and a memory beyond pictures (now captured in his drawing).</p>
         </div>
         <div class="timeline-image right" >
           <a class="fancybox" rel="group" href="img/Proposal-1.jpg">
@@ -316,7 +316,7 @@
             <div class="image-box">
             <img src="img/Proposal-1.jpg" alt="Proposal Sunset" class="fade-right">
             </div>
-      <p>Dark, rainy, just us on a deserted island. No photos—only Simon’s words, moving Amanda to tears and creating a memory beyond pictures (now captured in his drawing).</p>
+      <p>Dark, rainy, just us on a remote island. No photos—only Simon’s beautiful words etched in memory (replayed in his sketch)</p>
     </div>
   </div>
 
@@ -327,7 +327,7 @@
             <div class="image-box">
             <img src="img/Proposal-2.jpg" alt="Proposal Sunset" class="fade-right">
             </div>
-      <p>Dark, rainy, just us on a deserted island. No photos—only Simon’s words, moving Amanda to tears and creating a memory beyond pictures (now captured in his drawing).</p>
+      <p>In the pouring rain, she said yes to a lifetime of sunsets—with her plushies as the only witness</p>
     </div>
   </div>
 
@@ -338,7 +338,7 @@
             <div class="image-box">
             <img src="img/Proposal-3.jpg" alt="Proposal Sunset" class="fade-right">
             </div>
-      <p>We went back to our secret island and were blessed with a stunning sunset. We recreated the moment with pictures – felt like a dream!</p>
+      <p>Returned to the island with better weather—just the two of us again—blessed with a stunning sunset to relive it all </p>
     </div>
   </div>
 </section>
